# py-base-convert

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_base_convert/: __init__.py
tests/: test_base_convert.py  test_import.py
