[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-base-convert"
version = "0.2.0"
description = "Convert numbers between any base (2-62) with human-friendly APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["convert", "encode", "base62", "base58", "base36"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-base-convert#readme"
Repository = "https://github.com/philiprehberger/py-base-convert"
Issues = "https://github.com/philiprehberger/py-base-convert/issues"
Changelog = "https://github.com/philiprehberger/py-base-convert/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_base_convert"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
